# alpacapella

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: annotation_smoothing.ipynb
notebooks/examples/: example_annotation1.txt  example_annotation2.txt  example_annotation3.txt
report/: references.bib  report.tex
report/content/: abstract.tex  conclusion.tex  datasets.tex  discussions.tex  evaluation.tex  introduction.tex  models.tex  results.tex  title.tex
src/alpacapella/: __init__.py  annotations.py
src/alpacapella/annotations/: __init__.py  annotations.py  statistics.py  utils.py
src/alpacapella/beat_this/: __init__.py  beat_this.py
src/alpacapella/madmom/: __init__.py  madmom.py
